# autoneat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml  release.yml
docs/: INSTALL.md  PERMISSIONS.md
plugin/: autoneat.py
plugin/autoneat_lib/: __init__.py
plugin/autoneat_lib/core/: batch.py  ocr.py  recorder.py  resolve_client.py  shotid.py  ui_driver.py  windows.py
plugin/autoneat_lib/ui/: __init__.py  window.py
scripts/: fetch_cliclick.sh  install.sh
src/autoneat/: __init__.py  __main__.py  _neat_ui.py  _neat_vision.py  api.py  cli.py  doctor.py  resolve.py  runner.py
src/autoneat/core/: __init__.py  batch.py  click.py  neat_ofx.py  ocr.py  resolve_client.py  subprocess_utils.py  ui_driver.py  windows.py
src/autoneat/resources/: vision_ocr.swift
tests/: test_api.py  test_cli.py  test_neat_ui.py  test_resolve.py
