[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoneat"
version = "0.1.0"
description = "Standalone Neat Video Auto Profile automation for DaVinci Resolve"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mohammad Hadi" }]
dependencies = [
  "dvr>=1.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[project.scripts]
autoneat = "autoneat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autoneat = ["resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
